Fixed images and broken styles

--- a/app/styles/_mystyles.scss
+++ b/app/styles/_mystyles.scss
@@ -47,7 +47,6 @@ body {
     color: $standard;
     border-bottom: none !important;
     border-radius: 5px;
-    height: initial !important;
 }
 
  /* headers */
@@ -121,13 +120,13 @@ body {
  .appScreen {
 
      width: 70%;
-     height: 90%;
+     height: auto;
  }
 
  .appIcon {
 
      width: 30%;
-     height: 50%;
+     height: auto;
  }
 
  .container-narrow > hr {
@@ -138,7 +137,6 @@ body {
  .card-panel {
    text-align: center;
    border-bottom: 5px solid $stockBorders;
-   height: initial !important;
    /* float our main image */
    img
    {
